# personal_website

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build_release.sh  index.html  package-lock.json  package.json  style.css  tailwind.config.js
.github/workflows/: deploy.yml  rust.yml
res/content/: aboutme.md  educ.md  educ.yaml  profexper.md  profexper.yaml  projects.md  techskills.md
res/content/aboutme/: aboutme.md
res/content/projects/: 2021-06_campaign_management.md  2023-07_automobile_segmentation.md  2023-10_fynd.md  2023-12_ml_ecommerce.md  2024-02_website_development.md  2024-06_cognitive_biases_llms.md  2024-10_bankingkpis.md
res/images/: ascii.txt
src/: main.rs  router.rs  safehtml.rs
src/components/: bullet.rs  footer.rs  icons.rs  navbar.rs  project.rs  timeline.rs
src/pages/: home.rs
src/pages/projects/: automobile_segmentation.rs  banking_kpis.rs  campaign_management.rs  cognitive_biases_llms.rs  fynd.rs  ml_ecommerce.rs  website_development.rs
styles/: input.css  main.css
