[package]
name = "personal_website"
version = "0.1.0"
edition = "2021"

[dependencies]
comrak = "0.21.0"
gloo-utils = "0.2.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }

[profile.release]
# Less code to include into binary
panic = 'abort'
# Optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# Optimization for size ( more aggressive )
opt-level = 'z'
# Link time optimization using using whole-program analysis
lto = true